// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminAnalytics /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-ksBlkl gDlyuV"
  >
    <h1
      class="sc-gswNZR gzqAHo sc-fEXmlR cIHzsJ"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-dIfARi gupYKT"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBYQkv jNlLug"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin analytics
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-ezOQGI ceLOaQ admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      type="button"
    >
      <span
        class="sc-kMjNwy cvYAst"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-ezOQGI ceLOaQ admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      type="button"
    >
      <span
        class="sc-kMjNwy cvYAst"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analyticsstyles__CardContainer-sc-gt0i0n-0 bPrTzl"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with analytics 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin analytics
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-ezOQGI ceLOaQ admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      type="button"
    >
      <span
        class="sc-kMjNwy cvYAst"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-ezOQGI ceLOaQ admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      type="button"
    >
      <span
        class="sc-kMjNwy cvYAst"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analyticsstyles__CardContainer-sc-gt0i0n-0 bPrTzl"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-ksBlkl gDlyuV"
  >
    <h1
      class="sc-gswNZR gzqAHo sc-fEXmlR cIHzsJ"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-dIfARi gupYKT"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBYQkv jNlLug"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loadError 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-hHTYSt SeJTL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bjfHbI ibzWhy"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI hINqGN"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI hINqGN"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI hINqGN"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI hINqGN"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="sc-ksBlkl gDlyuV"
  >
    <h1
      class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h1>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin analytics
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-ezOQGI jMCGyQ admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      disabled=""
      type="button"
    >
      <span
        class="sc-kMjNwy jFBNxq"
      >
        Reload analytics
      </span>
      <div
        aria-hidden="true"
        class="sc-ilhmMj cMPRth"
      >
        <div
          class="sc-iJnaPW dqvaia"
        >
          <div
            class="sc-gikAfH hIVtvg"
          />
          <div
            class="sc-gikAfH cAXpTw"
          />
          <div
            class="sc-gikAfH dIHoGf"
          />
          <div
            class="sc-gikAfH JVdmW"
          />
          <div
            class="sc-gikAfH jwhdAx"
          />
          <div
            class="sc-gikAfH grIEyI"
          />
          <div
            class="sc-gikAfH eFMqec"
          />
          <div
            class="sc-gikAfH diHFLs"
          />
        </div>
      </div>
    </button>
    <button
      class="sc-ezOQGI ceLOaQ admin-analyticsstyles__Control-sc-gt0i0n-2 dSUxYS"
      type="button"
    >
      <span
        class="sc-kMjNwy cvYAst"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analyticsstyles__CardContainer-sc-gt0i0n-0 bPrTzl"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-ksBlkl gDlyuV"
  >
    <h1
      class="sc-gswNZR gzqAHo sc-fEXmlR cIHzsJ"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-dIfARi gupYKT"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBYQkv jNlLug"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;
